# docs/swagger.json
@@ -53,7 +53,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     }
                 }
@@ -96,13 +96,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     }
                 }
@@ -145,13 +145,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     }
                 }
@@ -201,19 +201,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     }
                 }
@@ -254,19 +254,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/config.APIError"
+                            "$ref": "#/definitions/models.APIError"
                         }
                     }
                 }
@@ -274,7 +274,7 @@
         }
     },
     "definitions": {
-        "config.APIError": {
+        "models.APIError": {
             "type": "object",
             "properties": {
                 "error": {
